--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "node serve-script",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run version8:server:production"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +26,16 @@
     "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
+    "@angular/platform-server": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@nestjs/common": "^6.0.0",
+    "@nestjs/core": "^6.0.0",
+    "@nestjs/ng-universal": "^1.1.1",
+    "@nestjs/platform-express": "^6.0.0",
+    "@nguniversal/express-engine": "^7.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.0",
     "hammerjs": "^2.0.8",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -43,9 +56,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "nodemon": "^1.18.11",
     "protractor": "~5.4.0",
+    "rimraf": "^2.6.3",
+    "string-replace-loader": "^2.1.1",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "wait-on": "^3.2.0",
+    "webpack-cli": "^3.1.0"
   }
 }
